--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ gitment:
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-yat
+remote_theme: jeffreytse/jekyll-theme-yat
 
 plugins:
   - jekyll-feed
