--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   great help if you give and teach your knowledge and thoughts to me.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jeffreytse.net" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: "/favicon.png" # the favicon for your site
 
 # Yat date format
