ci: add travis deployment script

--- a/_config.yml
+++ b/_config.yml
@@ -89,8 +89,7 @@ gitment:
 
 # Build settings
 markdown: kramdown
-# theme: jekyll-theme-yat
-remote_theme: jeffreytse/jekyll-theme-yat
+theme: jekyll-theme-yat
 
 plugins:
   - jekyll-feed
