--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jeffreytse.net" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: "/favicon.png" # the favicon for your site
+favicon: "/favicon.jpg" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
