fix: about link of header_pages

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ header_pages:
   - archives.html
   - categories.html
   - tags.html
-  - about.html
+  - about.md
 
 # Pagination setting
 paginate: 10
