fix(ci): error install bundler
The last version of bundler (>= 0) to support your Ruby & RubyGems was 2.4.22.
Try installing it with `gem install bundler -v 2.4.22` bundler requires Ruby
version >= 3.0.0. The current ruby version is 2.7.8.225.

--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           provider: 'github'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          bundler_ver: '~>2.4.0'
