--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -14,13 +14,15 @@ jobs:
       # Use GitHub Actions' cache to cache dependencies on servers
       - uses: actions/cache@v4
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          path: |
+            .asdf/**
+            vendor/bundle
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/cache.key') }}
           restore-keys: |
-            ${{ runner.os }}-gems-
+            ${{ runner.os }}-cache-
 
       # Use GitHub Deploy Action to build and deploy to Github
-      - uses: jeffreytse/jekyll-deploy-action@v0.6.0
+      - uses: jeffreytse/jekyll-deploy-action@v0.7.0
         with:
           provider: 'github'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
